--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -13,12 +13,12 @@
 <a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/2/n12728825.md#1" title="中共是跨国犯罪组织 美前高官：望拜登认定""><img width="73" src="https://i.epochtimes.com/assets/uploads/2021/02/P1130168-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/3/n12730042.md#1" title="两律师为12港人辩护遭撤照 美国务院关注""><img width="73" src="https://i.epochtimes.com/assets/uploads/2021/02/GettyImages-1230934813-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/yrsmsb310/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://yrsmsb310.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>7分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/3/n12730190.md#1">各地出生人口骤降 专家：中国人口塌陷已到</a><br>
-:clock8: <em>15分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/3/n12731556.md#1">据报新疆拘禁营女性遭性侵 美政府深感不安</a><br>
-:clock8: <em>18分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/3/n12731306.md#1">杨洁篪向美高调喊话 专家谈美中关系走向</a><br>
-:clock8: <em>32分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/2/n12728803.md#1">【时事军事】以色列警告美 放宽伊朗制裁即宣战</a><br>
-:clock8: <em>34分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/4/n12731625.md#1">去年准居留台湾港人增近万人</a><br>
-:clock8: <em>50分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/3/n12731533.md#1">民主党人欲将弹劾拜登的女议员挤出委员会</a><br>
+:clock8: <em>25分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/3/n12730190.md#1">各地出生人口骤降 专家：中国人口塌陷已到</a><br>
+:clock8: <em>33分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/3/n12731556.md#1">据报新疆拘禁营女性遭性侵 美政府深感不安</a><br>
+:clock8: <em>36分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/3/n12731306.md#1">杨洁篪向美高调喊话 专家谈美中关系走向</a><br>
+:clock8: <em>50分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/2/n12728803.md#1">【时事军事】以色列警告美 放宽伊朗制裁即宣战</a><br>
+:clock8: <em>52分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/4/n12731625.md#1">去年准居留台湾港人增近万人</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/3/n12731533.md#1">民主党人欲将弹劾拜登的女议员挤出委员会</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/1/n12726461.md#1">【独家】上海流调报告为何不提染疫源头</a><br>
 <a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/3/n12729243.md#1">杨洁篪喊话吁双方尽快接触 美国务院回应</a><br>
@@ -105,7 +105,7 @@
 ```diff
 !退出中共党、团、队总人数:
 
-!共 372,210,688 人
+!共 372,211,966 人
 ```
 </strong></h3></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>中国人权</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/3/n12731556.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/02/000_1QP89S-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/3/n12731556.md#1">据报新疆拘禁营女性遭性侵 美政府深感不安</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/2/n12728987.md#1">前情报官：中共或已窃取80%美国成年人个资</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/3/n12730986.md#1">武汉蝙蝠T恤再刺激中共神经 网友：哪里有卖</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/3/n12730318.md#1">河北律师卢廷阁举报石家庄市律协侮辱诽谤</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/3/n12730192.md#1">中共以防疫名义 非法限制维权人士人身自由</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/3/n12729776.md#1">湖北访民被政府“精神病” 讨说法无果</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid278.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>中国经济</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/3/n12730190.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2018/01/4f1eb50ab827ca4fc63c97322f4e7ec5-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/3/n12730190.md#1">各地出生人口骤降 专家：中国人口塌陷已到</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/3/n12731419.md#1">中国科技股市值蒸发超3千亿 多只龙头股暴跌</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/3/n12731301.md#1">大陆影视业2020业绩惨淡 万达预亏逾60亿</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/3/n12730925.md#1">中共推迟公布2020年出生人口数据 引关注</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/3/n12729643.md#1">被查后首度发声 蚂蚁集团称上市存重大不确定性</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/3/n12729623.md#1">恒大再次在全国75折售房 分析：债务压力大</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid283.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>大陆政治</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/3/n12731372.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/01/white-house-1953465_1920-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/3/n12731372.md#1">分析：拜登对华核心团队 左右手意见不统一</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/3/n12731358.md#1">腐败猖獗 中共多部门联合发“十个严禁”</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/3/n12730865.md#1">【名家专栏】拜登的聪明做法难敌中共侵略</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/3/n12730317.md#1">浸淫安徽政法36年 前政府副秘书长被双开</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/3/n12730294.md#1">因应中共威胁 蔡英文核定国防部情研中心增编</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/3/n12730056.md#1">海南高院女副院长张家慧直系下属被起诉</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid277.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>天灾人祸</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/3/n12731268.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/02/660fcbc285753ab10504c685be0e2deb-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/3/n12731268.md#1">北京大兴西红门一商场曾现疫情 当局遮掩</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/3/n12730332.md#1">中共病毒沈阳一号病例死亡 官方未通报</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/3/n12729619.md#1">山东诸城化工废料致37人中毒 至少4死</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/3/n12729138.md#1">佳木斯大润发超市被封 市民：疑是官员甩锅</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/2/n12728866.md#1">【一线采访】志愿者挨累干活 通化官员抢功</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/2/n12728650.md#1">世卫专家武汉调查受限 日媒报当地实情遭断讯</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid280.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>社会万象</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/3/n12731067.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/02/huo-320x200.png"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/3/n12731067.md#1">中共官方出版社新年礼盒 五福藏“祸”字</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/3/n12730987.md#1">黑龙江警察被前妻举报家暴诈骗 微博删文</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/2/n12726893.md#1">三退声明精选（2021/02/01）</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/1/n12725341.md#1">广州温州去年出生率创新低 疫情影响成原因</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/1/31/n12723682.md#1">【疫情1.31】加州单日新增近1.9万个确诊</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/1/31/n12723678.md#1">青岛幼儿使用抑菌膏出事 变“大头娃娃”</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid282.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>科教文化</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/2/n12727149.md#1"><img width="320" align ="left" src="https://www.epochtimes.com/assets/themes/djy/images/djy_post_default_featured_image_320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/2/n12727149.md#1">四川女大学生学车后失踪遇害 疑遭奸杀</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/1/n12726354.md#1">研究：中共南海潜艇士兵21%有心理和精神问题</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/1/n12725278.md#1">大陆禁学生带手机上学 网酸：不如禁微信群</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/1/21/n12701693.md#1">美名校教授警告身处大陆学生勿选中国政治课</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/1/21/n12702057.md#1">宁波教师性侵13岁女生 校方发声明引批评</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/1/20/n12699629.md#1">腾讯QQ被曝自动读取用户浏览器历史记录</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid281.md#1">更多......</a></p></td></tr>
 <tr><td VALIGN=TOP width="370"><h2><p><strong>独家视角</strong></p></h2><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/1/20/n12700072.md#1">【独家】中国东盟峰会 中共防嘉宾不利言论</a><br>
