--- a/gb/news2007_3.md
+++ b/gb/news2007_3.md
@@ -35,6 +35,10 @@
 <tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/1/23/n12706624.md#1" target="_blank">【解密时分】诺查丹玛斯预言：彭斯和美国大选</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/1/23/n12706624.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/01/YT-1920a-150x120.jpg" align ="left"></a>彭斯危险？最新大选预言解密；彭斯的名字竟然出现在400年前的预言诗中；诺查丹玛斯准确预测川普、彭斯和美国大选；1月6日发生了什么？到底是谁将要被关到笼子里？......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年01月23日 12:24 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/1/18/n12695110.md#1" target="_blank">缘分真的很奇妙</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/1/18/n12695110.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/01/100824035416100093-150x120.jpg" align ="left"></a>缘分真的很奇妙！结识了一位很特殊的朋友，看似孤伶伶的，有一天突然感受到其所爆发的影响力。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年01月23日 9:00 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/1/18/n12695506.md#1" target="_blank">【命理】凡参与陷害的 无一例外都得报应</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/1/18/n12695506.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/01/236b6466fdbaecc28284641c6de575ab-150x120.jpg" align ="left"></a>南北朝时的一件警世案子，人生如意的主角突然平地起风浪，被冤枉构陷入罪致死；结果凡参与陷害的人，无一例外都得报应。又类似主角这样的人生，八字可能表现出来吗？......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年01月23日 9:00 AM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/1/26/n12713488.md#1" target="_blank">墨茶兄弟</a><br></h3>这一天飘起了雪花，
+网上都晒吃饺子啦。
+翻看桌面的老皇历，
+才知道今个冬至啦。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年01月27日 12:04 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/1/25/n12711160.md#1" target="_blank">诗歌：大戏（五首）</a><br></h3>将军唱罢乱登台， 旦丑青衣各挠腮。 剧本天成书有序， 结局奇妙费神猜！......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年01月26日 12:28 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/1/25/n12711159.md#1" target="_blank">一七令．武汉的山——武汉封城周年祭</a><br></h3> 山。 蛇望，龟山。 黄陂景，木兰山。 西陵胜地，赏云雾山。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年01月26日 12:19 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/1/25/n12711158.md#1" target="_blank">五律：一梦</a><br></h3>望眼横千载，春秋岁不同。 江南河北雨，汉代宋朝风。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年01月26日 12:16 AM			</td></tr>
@@ -44,6 +48,5 @@
 依旧是严冬。
 夜永心犹重，
 天寒雾太浓。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年01月24日 12:12 AM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/1/22/n12705852.md#1" target="_blank">诗歌：人心展现</a><br></h3>末时淘汰人心定， 考验才能看得清。 混乱之中人性显， 阳光之下暗尘明。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年01月23日 12:58 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/news2007_2.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/yrsmsb310/djy/blob/master/gb/news2007.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/yrsmsb310/djy/blob/master/gb/news2007_2.md#1">2</a>&nbsp;&nbsp;3&nbsp;&nbsp;<a href="https://github.com/yrsmsb310/djy/blob/master/gb/news2007_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/yrsmsb310/djy/blob/master/gb/news2007_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/yrsmsb310/djy/blob/master/gb/news2007_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/yrsmsb310/djy/blob/master/gb/news2007_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/yrsmsb310/djy/blob/master/gb/news2007_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/yrsmsb310/djy/blob/master/gb/news2007_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/yrsmsb310/djy/blob/master/gb/news2007_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/yrsmsb310/djy/blob/master/gb/news2007_4.md#1">下一页</a></h3></td></tr>
 </table><div align="center"><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/yrsmsb310/djy/blob/master/gb/news2007_3.md#1<br><a href="https://github.com/yrsmsb310/djy/blob/master/gb/news2007_3.md#1"><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/yrsmsb310/djy/blob/master/gb/news2007_3.md%231" title="分享本文章"></a><br>原文地址： <a href="https://www.epochtimes.com/gb/news2007_3.htm">https://www.epochtimes.com/gb/news2007_3.htm</a>    （国内需<a href="https://github.com/yrsmsb310/www/blob/master/README.md#8">下载翻墙软件</a>才能访问）</div>
