--- a/gb/nf3046_2.md
+++ b/gb/nf3046_2.md
@@ -44,7 +44,7 @@
 排名前十位的中共亿元贪官
 第一名：赖小民，17.88亿元
 2020年8月11日，天津市第二中级法院开庭审.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年12月22日 10:48 AM							</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/20/12/20/n12634380.md#1" target="_blank">墨尔本汽车游行传真相 澳民：望你们天天游</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/20/12/20/n12634380.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/12/MG_3642-3-150x120.jpg" align ="left"></a>2020年12月20日，墨尔本退党服务中心再度举办“End the Evil CCP”（解体中共邪党）主题汽车游行。近一个月以来，主办方共计发起了十余次车队游行。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年12月21日 11:49 AM							</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/1/9/n12676924.md#1" target="_blank">三退声明精选（2020/01/08）</a><br></h3>工作中能遇到社会上各种各样的人，亲身感受到近几年环境的变化，每个阶层的人不论男女老幼都开始拜金，以貌取人，对待弱势乃至对待动物毫无同理心。原本的淳朴善良没了，取而代之的是互相猜忌，坑蒙拐骗，谁有心眼谁就能爬上去，不论是职场上还是官场上。中共的党文化就是这种现象的来源，为了官员自己的利益不择手段，连带小老百姓也牵涉其中。前年年底听到风声逃离武汉，中共的社区干部.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年01月09日 9:47 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/1/8/n12676333.md#1" target="_blank">曾为中共收集战略情报 阎宝航被中共折磨致死</a><br></h3>今天知道阎宝航的人可能很少了，当年他可是大名鼎鼎。阎宝航出生于辽宁省海城市，曾留学英国爱丁堡大学，是曾任东北保安军总司令、后任中华民国陆海空军副司令张学良的密友，中华民国军事委员会委员长蒋介石及其夫人宋美龄身边的大红人。
 
 因与中华民国最高层关系密切，阎宝航成为中共极力拉拢的对象，后被中共领导人周恩来秘密发展成中共党员，专门负责收集战略情报。中共建政后.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年01月09日 4:44 AM							</td></tr>
